--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,4 +52,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ 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 }}
+          GITHUB_TOKEN: ${{ secrets.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 }}
